[FIX] Another text/bg contrast problem.

--- a/mods/trunk/themes/planetfall_tiki_5/styles/planetfall.css
+++ b/mods/trunk/themes/planetfall_tiki_5/styles/planetfall.css
@@ -709,8 +709,8 @@ table.sortable {
 
 body.tiki_webmail table.normal {color: #436976}
 
-.normal td,
-td.normal,
+/*.normal td,
+td.normal,*/
 .wikitable td,
 td.odd,
 td.even {
